ecmascript/parser/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts.stderr
error: A 'break' statement can only be used within an enclosing iteration or switch statement
 --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:7:1
  |
7 | break;
  | ^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:11:19
   |
11 | for (var x in {}) break TWO;
   |                   ^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:17:9
   |
17 |         break TWO;
   |         ^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:24:9
   |
24 |         break THREE;
   |         ^^^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:30:5
   |
30 |     break FIVE;
   |     ^^^^^^^^^^^

error: A 'break' statement can only jump to a label of an enclosing statement
  --> $DIR/tests/typescript-errors/tsc/statements/breakStatements/invalidForInBreakStatements/input.ts:40:5
   |
40 |     break NINE;
   |     ^^^^^^^^^^^

